# Asteria

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
docs/: 00-product-vision.md  01-architecture-overview.md  02-adr-001-path-b-native-cpp-with-astrolog-adapter.md  03-domain-model.md  04-chart-rendering-spec.md  05-astrolog-engine-integration-spec.md  06-database-spec.md  07-ui-ux-spec.md  08-export-spec.md  09-interpretation-spec.md  10-location-timezone-spec.md  11-automation-and-batch-spec.md  12-testing-strategy.md  13-build-release-installer-spec.md  14-roadmap-v1-v1_1.md  copilot-instructions.md  prompt-sequence.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt  asteria.rc  main.cpp
src/automation/: CMakeLists.txt  automation_stub.cpp  cli_dispatcher.cpp  cli_dispatcher.h  cli_json_input.cpp  cli_json_input.h  cli_main.cpp
src/core/: CMakeLists.txt  birth_event_resolver.cpp  birth_event_resolver.h  comparison_chart_service.cpp  comparison_chart_service.h  export_service.cpp  export_service.h  interpretation_service.cpp  interpretation_service.h  natal_chart_service.cpp  natal_chart_service.h  report_service.cpp  report_service.h  result.h  transit_report_service.cpp  transit_report_service.h
src/data/: CMakeLists.txt  birth_event_repository.cpp  birth_event_repository.h  chart_repository.cpp  chart_repository.h  library_database_exchange.cpp  library_database_exchange.h  location_repository.cpp  location_repository.h  migration_runner.cpp  migration_runner.h  person_repository.cpp  person_repository.h  sqlite_database.cpp  sqlite_database.h  theme_repository.cpp  theme_repository.h
src/domain/: CMakeLists.txt  birth_event.cpp  birth_event.h  chart_request.cpp  chart_request.h  chart_theme.cpp  chart_theme.h  computed_chart.cpp  computed_chart.h  export_artifact.cpp  export_artifact.h  interpretation_note.cpp  interpretation_note.h  location_resolution.cpp  location_resolution.h  person.h  types.h
src/engine/: CMakeLists.txt  astrolog_adapter.cpp  astrolog_adapter.h  astrolog_cli_bridge.cpp  astrolog_cli_bridge.h  astrolog_embedded_engine.cpp  astrolog_embedded_engine.h  fake_chart_engine.cpp  fake_chart_engine.h  ichart_engine.h
src/render/: CMakeLists.txt  astro_glyphs.h  chart_scene.cpp  chart_scene.h  comparison_chart_layout.cpp  comparison_chart_layout.h  export_layout_templates.cpp  export_layout_templates.h  natal_chart_layout.cpp  natal_chart_layout.h  png_rasterizer.cpp  png_rasterizer.h  svg_serializer.cpp  svg_serializer.h  theme_presets.cpp  theme_presets.h  transit_chart_layout.cpp  transit_chart_layout.h
src/ui/: CMakeLists.txt  README.md  about_dialog.cpp  about_dialog.h  ai_interpretation_panel.cpp  ai_interpretation_panel.h  app_context.cpp  app_context.h  app_window.cpp  app_window.h  astrology_font.cpp  astrology_font.h  chart_workspace_panel.cpp  chart_workspace_panel.h  clipboard.cpp  clipboard.h  compare_workspace_panel.cpp  compare_workspace_panel.h  export_options.cpp  export_options.h  file_dialog.cpp  file_dialog.h  library_panel.cpp  library_panel.h  markdown_render.cpp  markdown_render.h  settings_panel.cpp  settings_panel.h  transit_timeline_panel.cpp  transit_timeline_panel.h  version.h
src/util/: CMakeLists.txt  atlas_service.cpp  atlas_service.h  ollama_client.cpp  ollama_client.h
tests/: CMakeLists.txt
tests/fixtures/: README.md
tests/integration/: astrolog_engine_test.cpp  database_test.cpp  library_database_exchange_test.cpp
tests/unit/: atlas_service_test.cpp  birth_event_resolver_test.cpp  cli_dispatcher_test.cpp  cli_json_input_test.cpp  comparison_render_test.cpp  comparison_service_test.cpp  domain_test.cpp  engine_test.cpp  export_test.cpp  interpretation_test.cpp  ollama_client_test.cpp  render_test.cpp  report_service_test.cpp  smoke_test.cpp  svg_determinism_test.cpp  transit_report_service_test.cpp  uncertain_time_test.cpp
tools/: aqt-settings.ini  install_qt.py
tools/dev/: README.md  convert_legacy_charts.py
tools/examples/automation-cli/: README.md  compute_composite.json  compute_natal.json  compute_transit.json  export_ai_report_pdf.json  export_png_synastry.json  export_svg_transit.json  generate_transit_timeline.json  resolve_location.json
tools/packaging/: LICENSE.txt  NOTICES.txt  README.md  asteria.iss  create_portable_zip.ps1  installer-assets.md  release-checklist.md  v1-milestone-checklist.md
tools/scripts/: bootstrap_third_party.ps1  generate_icon.py
